# coat

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  avizo.c  bat.c  bemenu.c  bemenu.h  btop.c  btop.h  cava.c  cava.h  coat  dunst.c  firefox.c  firefox.h  fish.c  fish.h  gtk.c  helix.c  helix.h  i3.c  kitty.c  kitty.h  main.c  mangowc.c  rofi.c  schemes.c  schemes_list.c  sway.c  sway.h  swaylock.c  tinted_parser.c  tinted_parser.h  tty.c  tty.h  vesktop.c  (+8 more)
.claude/: settings.local.json
completions/: coat.fish
docs/: commands.html  configuration.html  index.html  installation.html  modules.html  style.css  themes.js  wallpaper.html
include/: anyrun.h  avizo.h  bat.h  coat_util.h  coat_yaml.h  conky.h  dunst.h  foot.h  fuzzel.h  gtk.h  hct.h  hyprland.h  i3.h  kitty.h  labwc.h  lf.h  mako.h  mangowc.h  material_you.h  niri.h  qt.h  quantize_celebi.h  ranger.h  rofi.h  schemes.h  schemes_list.h  score.h  sway.h  swaylock.h  tinted_parser.h  vesktop.h  vscode.h  wallpaper.h  waybar.h  xresources.h  yaml.h  yazi.h  zathura.h
src/: browse.rs  config.rs  main.rs  modules.rs  scheme.rs  windows.rs
src/core/: hct.c  main.c  material_you.c  quantize_celebi.c  schemes.c  schemes_list.c  score.c  tinted_parser.c  wallpaper.c  yaml.c
src/modules/: anyrun.c  avizo.c  bat.c  bemenu.c  btop.c  cava.c  conky.c  dunst.c  firefox.c  fish.c  (+24 more)
templates/: ashell.tera  avizo.tera  bat.tera  btop.tera  dunst.tera  firefox.tera  firefox_content.tera  fish.tera  foot.tera  fuzzel.tera  gtk.tera  helix.tera  hyprland.tera  i3.tera  kde.tera  kitty.tera  konsole.tera  labwc.tera  lf.tera  mpv.tera  neovim.tera  qt_colors.tera  ranger.tera  rofi.tera  sway.tera  swaylock.tera  vesktop.tera  waybar.tera  xresources.tera  zathura.tera
