[package]
name = "coat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coat"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
dirs = "5"
anyhow = "1"
walkdir = "2"
indicatif = "0.18"
console = "0.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
