[package]
name = "coat"
version = "0.1.0"
edition = "2021"
# Ship the completion script inside the published crate/source tarball so
# packagers can install it; `cargo install` won't place it for you.
include = ["src/**/*", "templates/**/*", "completions/**/*", "README.md", "USAGE.md", "LICENSE"]

# cargo-deb: install the fish completions to the system vendor dir.
[package.metadata.deb]
assets = [
    ["target/release/coat", "usr/bin/", "755"],
    ["completions/coat.fish", "usr/share/fish/vendor_completions.d/coat.fish", "644"],
]

[[bin]]
name = "coat"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
dirs = "5"
anyhow = "1"
walkdir = "2"
indicatif = "0.18"
console = "0.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
